Fixing form styling on iOS

--- a/_sass/theme/_subscribe.scss
+++ b/_sass/theme/_subscribe.scss
@@ -42,6 +42,7 @@
     margin: 0; 
     width: 170px; 
     vertical-align:top;
+    -webkit-appearance: none;
     @include media-query($small) {
         width: 190px;        
     }
@@ -86,9 +87,9 @@
     font-family: $SansSerif;
     font-size: .85rem;
     border: none; 
-    -webkit-border-radius: 4px; 
-    -moz-border-radius: 4px; 
-    border-radius: 4px; 
+    -webkit-border-radius: 3px; 
+    -moz-border-radius: 3px; 
+    border-radius: 3px; 
     color: v(brand-darkest-faded); 
     background-color: v(brand); 
     box-sizing:border-box; 
@@ -96,6 +97,7 @@
     display: inline-block; 
     margin: 0; 
     transition: all 0.08s ease-in-out 0.08s;
+    -webkit-appearance: none;
     @include media-query($medium) {
         font-size: $base-font-size * 1.308;        
     }
